specs/blueprints/errors/parsing/cyclic_dependency.eno
# Multiple sections with multiple cyclical copy chains

-- input
# section_1 < section_2
field: value

## subsection_1 < subsection_2
field: value

# section_2 < section_1
field: value

## subsection_2 < section_1
field: value
-- input

## ParseError

-- text
In line 10 'section_1' is copied into itself.
-- text

-- snippet
   Line | Content
 *    1 | # section_1 < section_2
      2 | field: value
      3 | 
 *    4 | ## subsection_1 < subsection_2
      5 | field: value
      6 | 
   ...
      8 | field: value
      9 | 
 >   10 | ## subsection_2 < section_1
     11 | field: value
-- snippet

selection: [9,18] => [9,27]

# Three ambiguous elements copying each other, two of them cyclically

-- input
copy < empty
empty < cyclic
cyclic < empty
-- input

## ParseError

-- text
In line 3 'empty' is copied into itself.
-- text

-- snippet
   Line | Content
      1 | copy < empty
 *    2 | empty < cyclic
 >    3 | cyclic < empty
-- snippet

selection: [2,9] => [2,14]

# Three sections with one being copied into its own subsection

-- input
# section
## copied_subsection < section
# copied_section < section
-- input

## ParseError

-- text
In line 2 'section' is copied into itself.
-- text

-- snippet
   Line | Content
 *    1 | # section
 >    2 | ## copied_subsection < section
      3 | # copied_section < section
-- snippet

selection: [1,23] => [1,30]

# Three sections with one being copied into its own subsubsection

-- input
# section
## subsection
### copied_subsubsection < section
-- input

## ParseError

-- text
In line 3 'section' is copied into itself.
-- text

-- snippet
   Line | Content
 *    1 | # section
 *    2 | ## subsection
 >    3 | ### copied_subsubsection < section
-- snippet

selection: [2,27] => [2,34]

# Two fieldsets mutually copying each other

-- input
copy < fieldset
entry = value

fieldset < copy
entry = value
-- input

## ParseError

-- text
In line 4 'copy' is copied into itself.
-- text

-- snippet
   Line | Content
 *    1 | copy < fieldset
      2 | entry = value
      3 | 
 >    4 | fieldset < copy
      5 | entry = value
-- snippet

selection: [3,11] => [3,15]

# Two lists mutually copying each other

-- input
copy < list
- item

list < copy
- item
-- input

## ParseError

-- text
In line 4 'copy' is copied into itself.
-- text

-- snippet
   Line | Content
 *    1 | copy < list
      2 | - item
      3 | 
 >    4 | list < copy
      5 | - item
-- snippet

selection: [3,7] => [3,11]
